# cgptchatbot

./: CMakeLists.txt  README.md
src/: appdata.c  appdata.h  cgptchatbotapp.c  cgptchatbotapp.h  cgptchatbotchatbox.c  cgptchatbotchatbox.h  cgptchatbotstartup.c  cgptchatbotstartup.h  cgptchatbotwin.c  cgptchatbotwin.h  chat.c  chat.h  main.c  openai.c  openai.h  util.c  util.h
tests/: mock_server.c  mock_server.h  test_appdata.c  test_chat.c  test_openai.c  test_util.c  test_util.h
ui/: cgptchatbot.gresource.xml  chatbox.ui  menu.ui  startup.ui  style.css  window.ui
